--- a/tool-state/src/main/resources/application.properties
+++ b/tool-state/src/main/resources/application.properties
@@ -1,3 +1,19 @@
-# Pushgateway URL (pod/service). Default points to k8s service 'pushgateway'
-pushgateway.url=http://pushgateway:9091
+# HTTP
+quarkus.http.host=0.0.0.0
+quarkus.http.port=8080
+
+# Micrometer / Prometheus
+# enable prometheus registry
+quarkus.micrometer.export.prometheus.enabled=true
+# expose prometheus metrics at the explicit path
+quarkus.micrometer.export.prometheus.path=/q/metrics/prometheus
+
+# common binders
+quarkus.micrometer.binder.jvm.enabled=true
+quarkus.micrometer.binder.system.enabled=true
+quarkus.micrometer.binder.processor.enabled=true
+
+# Enable access log so HTTP requests appear in pod logs
+quarkus.http.access-log.enabled=true
+
 
